--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -121,7 +121,7 @@ function handle_results(val){
 </table>
 
 <div>
-<input type=button id="synmap_go" value="Generate SynMap" onClick="$('#synmap_go').hide(); $('#results').html('<span class=dna>Loading. . .</span>');go(['args__oid1','org_id1','args__oid2','org_id2','args__D','D','args__g','g','args__A','A','args__chr_length_limit','chr_length_limit','args__blast','blast', 'args__seq_type1','seq_type1', 'args__seq_type2','seq_type2','args__show_diags_only','args__'+$('#show_diags_only')[0].checked],[handle_results]);" \>
+<input type=button id="synmap_go" value="Generate SynMap" onClick="$('#synmap_go').hide(); $('#results').html('<span class=dna>Loading. . .</span>');go(['args__oid1','org_id1','args__oid2','org_id2','args__D','D','args__g','g','args__A','A','args__chr_length_limit','chr_length_limit','args__blast','blast', 'args__seq_type1','seq_type1', 'args__seq_type2','seq_type2','args__show_diags_only','args__'+$('#show_diags_only')[0].checked,'args__flip_output','args__'+$('#flip_output')[0].checked],[handle_results]);" \>
 
 <input type=button value="Clear Results" onClick="$('#results').html('');" \>
 
@@ -183,6 +183,9 @@ function handle_results(val){
  <TR>
    <TD>Only show comparisons with diagonals?
    <TD><input type=checkbox name="show_diags_only" id="show_diags_only">
+ <TR>
+   <TD>Flip output grid?
+   <TD><input type=checkbox name="flip_output" id="flip_output">
 </TABLE>
 </TABLE>
 </div>
