added support for specifying addup/adddown from url that is passed in from perl script

--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -231,13 +231,13 @@ function featlist (link) {
      Add to Upstream:
     </td>
    <td>
-   <INPUT type="text" id="addup"  onkeypress="onEnter(event,1);" class="backbox" value= "0">
+   <INPUT type="text" id="addup"  onkeypress="onEnter(event,1);" class="backbox" value= "<TMPL_VAR NAME="ADDUP">">
      </td>
      <TD >
      Add to Downstream: 
     </td>
    <td>
-     <INPUT type="text" id="adddown" onkeypress="onEnter(event,1);" class="backbox" value= "0">
+     <INPUT type="text" id="adddown" onkeypress="onEnter(event,1);" class="backbox" value= "<TMPL_VAR NAME="ADDDOWN">">
    </td>
   </tr>
   </TMPL_IF>
