Added support for user selecting whether to draw pre-annotated cns

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -956,6 +956,12 @@ function hide_skip(num){
    <option value = "RNA" <TMPL_VAR NAME="DRAW_MODEL_RNA">>RNA</option>
    <option value = "0" <TMPL_VAR NAME="DRAW_MODEL_NO">>No</option>
   </select> Models
+ <TR>
+  <TD>
+  <font class="small">Show pre-annotated CNSs?</font>
+  <td>
+  <label class="small"><input class="backbox" type="radio" name="show_cns" id="show_cns" tabindex="1" value="1" <TMPL_VAR NAME="SHOW_CNS_YES">/>Yes</label>
+  <label class="small"><input class="backbox" type="radio" name="show_cns" id="show_cns" tabindex="1" value="0" <TMPL_VAR NAME="SHOW_CNS_NO"> />No</label>
 
 
 
