changed test in 'Do Folloing to Checked Features' menu

--- a/web/tmpl/FeatList.tmpl
+++ b/web/tmpl/FeatList.tmpl
@@ -194,9 +194,9 @@ if (ajax.length)
  			<select name=checked_action id=checked_action>
 	                 <option value = "blast">Send to CoGeBlast</option>
 	                 <option value = "gevo">Send to GEvo</option>
+           		 <option value = "msa">Send to CoGeAlign</option>
            		 <option value = "fasta">Get FASTA Sequences</option>
            		 <option value = "featmap">Get Feature Genome Map</option>
-           		 <option value = "msa">Align Features Using ClustalW</option>
            		 <option value = "xls">Export to Excel</option>
           </selected>  
           <input type=button value="Go" onClick="feature_checkboxes()">    
