made table formatting changes to NCBI and direct submission

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -1053,7 +1053,7 @@ function hide_skip(num){
 
 
 <DIV id="gb<TMPL_VAR NAME="SEQ_NUM">" style="display: none;" class="seq_submission_type<TMPL_VAR NAME="SEQ_NUM"> seq_submission_type">
-<TABLE style="width: 100%;" class="small">
+<TABLE class="small">
        <TR valign="top">
         <TD>Accession:
         <TD><input class="backbox" type="text" name="gbaccn<TMPL_VAR NAME="SEQ_NUM">" id="gbaccn<TMPL_VAR NAME="SEQ_NUM">" tabindex="1"  size="10" value="<TMPL_VAR NAME=GBACCN>" />
@@ -1067,7 +1067,7 @@ function hide_skip(num){
 </DIV>
 
 <DIV id="dir<TMPL_VAR NAME="SEQ_NUM">" style="display: none;" class="seq_submission_type<TMPL_VAR NAME="SEQ_NUM"> seq_submission_type">	
-<TABLE style="width: 100%;" class="small">
+<TABLE class="small">
       <TR valign="top">
       <TD>       
      Paste fasta or genbank format sequence below:<BR> <textarea class="backbox" name="dirseq<TMPL_VAR NAME="SEQ_NUM">" id="dirseq<TMPL_VAR NAME="SEQ_NUM">" tabindex="1"  rows="5" cols="30"></textarea><BR>
