fixed type in text

--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -109,13 +109,13 @@ function handle_results(val){
 </script>
 <table><tr><td>
 <DIV id=results><span class="alert">WARNING:</span>  SynMap is very computationally intense multi-step program which may take hours to complete.  Please do not repeatedly pressed the "Generate SynMap" button!  When run, SynMap will:
-<li class=small>Generate fasta files of all coding sequence in selected genoems
+<li class=small>Generate fasta files of all coding sequence in selected genomes
 <li class=small>Generate blastable databases of sequences
 <li class=small>Blast genomes (self-self and self-other)
 <li class=small>Find tandem duplicates in each genome (hence the self-self blast)
 <li class=small>Use DAGchainer to find syntenic regions (parameters below)
 <li class=small>Generate dotplot images and image maps with GEvo links<br>
-<span class=species>SynMap will run faster if it has been previously run as it won't regenerate anything that has been previously made.</span>
+<span class=species>SynMap will run faster if it has been previously run as it won't regenerate any previously made data-set.</span>
 
 </div>
 </table>
