--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -5,6 +5,20 @@ function get_organism_chain(type,val,i)
  if (type == 'name') {get_orgs(['args__name','args__'+val,'args__i','args__'+i], ['org_list'+i]);}
  else if (type == 'desc') {get_orgs(['args__desc','args__'+val,'args__i','args__'+i], ['org_list'+i]);}
  ajax_wait("get_datasets(['args__oid','org_id"+i+"','args__seq_type','seq_type"+i+"'],['ds_info"+i+"']);");
+ ajax_wait("check_previous_analyses();");
+}
+
+
+function check_previous_analyses(){
+ get_previous_analyses(['args__oid1','org_id1','args__oid2','org_id2','args__seq_type1','seq_type1', 'args__seq_type2','seq_type2'],['previous_analyses']);
+}
+
+function update_params() {
+ var params = $('#prev_params').val()[0].split('_');;
+ $('#g').val(params[0]);
+ $('#D').val(params[1]);
+ $('#A').val(params[2]);
+ 
 }
 
 function ajax_wait (val){
@@ -156,16 +170,20 @@ function handle_results(val){
 
 <tr><th>
 <DIV class="topItemSelected "><a href =http://dagchainer.sourceforge.net/ target=_new>DAGChainer</a> Options:</DIV>
+<table>
+<tr><td>
 <table class="dropMenu">
  <TR>
-   <TD>Average distance expected between syntenic genes:
+   <TD>Average distance expected between syntenic genes (-g):
    <TD><input type=text size=8 id="g" value="24000"> bp
  <TR>
-   <TD>Maximum distance between two matches: 
+   <TD>Maximum distance between two matches (-D): 
    <TD><input type=text size=8 id="D" value="120000"> bp
  <TR>
-   <TD>Minimum number of aligned pairs: 
+   <TD>Minimum number of aligned pairs (-A): 
    <TD><input type=text size=8 id="A" value="6"> bp
+</TABLE>
+<td valign=top><div id=previous_analyses></div>
 </TABLE>
 
 <tr><th>
