--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -119,13 +119,10 @@ function update_checkbox(name, dist, hspid, id){
   
   $('#feat'+hspid).html(name);
   $('#dist'+hspid).html(dist);
-  
-//        console.log(name+" "+id);  
   	var id_array = new Array();
 	if (id)
 	 {
   	id_array = id.split(',');
-//  console.log(	id_array[0]+"::"+id_array[1]);
   	$('#checkbox'+id_array[0]).attr("id","checkbox"+id_array[1]);
   	$('#'+id_array[0]).attr("value",id_array[1]).attr("id",id_array[1]);
          }
@@ -717,9 +714,6 @@ function get_displayFeature(){
  }
 }
 
-function get_organism_name_chain(val) {
- get_orgs(['args__'+val], ['org_list']);	 
-}
 
 function show_add() {
   if($('#add').is(":hidden")) {
@@ -746,11 +740,11 @@ function toggleFeature(html,check) {
  }
 }
 
-function timing(){
+function org_search(){
   if (pageObj.time){
    clearTimeout(pageObj.time);
   }
-   pageObj.time = setTimeout("get_organism_name_chain($('#org_text').val())",500);
+   pageObj.time = setTimeout("get_orgs(['args__name','org_name','args__desc','org_desc'], ['org_list']);",500);
 }
 
 function search_bar(div_id){
@@ -759,13 +753,13 @@ function search_bar(div_id){
 
 function restore_search_bar(div_id){
   if($('#'+div_id).val() == "") {
-  var regex = /^Organism\scount:\s(\d+)$/;
-  var count = regex.exec($('#org_count').html());
- 
- //TODO - use javascript obj to update this value 3473 to current number of organisms!
-   if (count[1] < 3473) get_organism_name_chain($('#org_text').val()); 
-   $('#'+div_id).val("Search").css({fontStyle: "italic"});
+  $('#'+div_id).val("Search").css({fontStyle: "italic"});
+  get_orgs(['args__name','org_name','args__desc','org_desc'], ['org_list']);
  }
+}
+
+function clear_box(div_id) {
+ $('#'+div_id).val("");
 }
 
 function org_info(info){
@@ -836,7 +830,6 @@ function clear_org_list()
     }
    
    match=log.match(/fasta/i);
-//  console.log(log);
   if (match && match[0])
    { 
      match.reverse();  
@@ -991,8 +984,8 @@ function clear_org_list()
    <TABLE class="list" >
        <TR valign=top>
           <TD>
-   	<DIV id="org_name"><TMPL_VAR NAME="ORG_NAME"></DIV>
-   	<DIV id="blah">Organism Name: <input type="text" size=11 onFocus="show_add();search_bar('org_text')" style="font-style:italic" value="Search" name="org_text" id="org_text" onBlur="restore_search_bar('org_text')" onKeyUp='timing();'></DIV>
+   	<DIV id="blah">Organism Name: <input type="text" size=11 onFocus="show_add();search_bar('org_name');clear_box('org_desc');restore_search_bar('org_desc');" style="font-style:italic" value="Search" name="org_name" id="org_name" onBlur="restore_search_bar('org_name')" onKeyUp='org_search();'></DIV>
+   	<DIV id="blah">Organism Description: <input type="text" size=11 onFocus="show_add();search_bar('org_desc');clear_box('org_name');restore_search_bar('org_name');" style="font-style:italic" value="Search" name="org_desc" id="org_desc" onBlur="restore_search_bar('org_desc')" onKeyUp='org_search();'></DIV>
    	<DIV id="org_list"><TMPL_VAR NAME="ORG_LIST"></DIV>
    	<input type=button value="Get Org Info" onClick="dataset_description_for_org(['org_id'],[org_info]);pageObj.lastMouseX=event.pageX;pageObj.lastMouseY=event.pageY;">
    	  </TD>
