--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -120,6 +120,7 @@ function handle_results(val){
 
 }
 
+
 </script>
 <table><tr><td>
 <DIV id=results><span class="alert">WARNING:</span>  SynMap is very computationally intense multi-step program which may take hours to complete.  Please do not repeatedly pressed the "Generate SynMap" button!  When run, SynMap will:
@@ -135,7 +136,7 @@ function handle_results(val){
 </table>
 
 <div>
-<input type=button id="synmap_go" value="Generate SynMap" onClick="$('#synmap_go').hide(); $('#results').html('<span class=dna>Loading. . .</span>');go(['args__oid1','org_id1','args__oid2','org_id2','args__D','D','args__g','g','args__A','A','args__chr_length_limit','chr_length_limit','args__blast','blast', 'args__seq_type1','seq_type1', 'args__seq_type2','seq_type2','args__show_diags_only','args__'+$('#show_diags_only')[0].checked,'args__flip_output','args__'+$('#flip_output')[0].checked],[handle_results]);" \>
+<input type=button id="synmap_go" value="Generate SynMap" onClick="$('#synmap_go').hide(); $('#results').html('<span class=dna>Loading. . .</span>');go(['args__oid1','org_id1','args__oid2','org_id2','args__D','D','args__g','g','args__A','A','args__chr_length_limit','chr_length_limit','args__blast','blast', 'args__seq_type1','seq_type1', 'args__seq_type2','seq_type2','args__show_diags_only','args__'+$('#show_diags_only')[0].checked,'args__flip_output','args__'+$('#flip_output')[0].checked, 'args__regen_images','args__'+$('#regen_images')[0].checked],[handle_results]);" \>
 
 <input type=button value="Clear Results" onClick="$('#results').html('');" \>
 
@@ -204,6 +205,12 @@ function handle_results(val){
  <TR>
    <TD>Flip output grid?
    <TD><input type=checkbox name="flip_output" id="flip_output">
+ <TR>
+   <TD>Regenerate dotplot images?
+   <TD><input type=checkbox name="regen_images" id="regen_images">
+<!-- <TR>
+   <TD>Pop-up Annotations?
+   <TD><input type=checkbox name="popup_anno" id="popup_anno">-->
 </TABLE>
 </TABLE>
 </div>
