added link to SynMap

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -155,9 +155,11 @@ function animate_section(name, style, speedy, show) {
 	 <li>Applications
 	  <ul>
 	  <li><a href="/CoGe/GenomeView.pl" target="_self">GenomeView</a></li>
-	  <li><a href="/CoGe/FeatView.pl" target="_self">FeatView</a></li>
 	  <li><a href="/CoGe/CoGeBlast.pl" target="_self">CoGeBlast</a></li>
+	  <li><a href="/CoGe/FeatView.pl" target="_self">FeatView</a></li>
+	  <li><a href="/CoGe/SynMap.pl" target="_self">SynMap</a></li>
 	  <li><a href="/CoGe/GEvo.pl" target="_self">GEvo</a></li>
+
 <!--	  <li><a href="/CoGe/MSAView.pl" target="_self">MSAView</a></li>
 	  <li><a href="/CoGe/TreeView.pl" target="_self">TreeView</a></li>-->
       </ul>
