fixed link to SynMap in carosel

--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -107,7 +107,7 @@ login(['uname', 'pwd','url'],[place_cookie]);
 -->		<a href="/CoGe/GenomeView.pl" onmouseover="timing(5)" onmouseout="timing(5,1)" onclick="timing(5,1)" title="GenomeView"><img src="/CoGe/picts/carousel/GenomeView-logo.png" width="100%" border=0/></a>
 		<a href="/CoGe/CoGeBlast.pl" onmouseover="timing(6)" onmouseout="timing(6,1)" onclick="timing(6,1)" title="CoGeBlast"><img src="/CoGe/picts/CoGeBlast-logo.png" width="100%" border=0/></a>
 <!--		<a href="/CoGe/docs/help/CoGe" onmouseover="timing(7)" onmouseout="timing(7,1)" onclick="timing(7,1)" title="CoGe FAQ"><img src="/CoGe/picts/carousel/FAQ-logo.png" width="100%" border=0/></a>-->
-		<a href="/CoGe/docs/help/CoGe" onmouseover="timing(8)" onmouseout="timing(8,1)" onclick="timing(8,1)" title="SynMap"><img src="/CoGe/picts/SynMap-logo.png" width="100%" border=0/></a>
+		<a href="/CoGe/SynMap.pl" onmouseover="timing(8)" onmouseout="timing(8,1)" onclick="timing(8,1)" title="SynMap"><img src="/CoGe/picts/SynMap-logo.png" width="100%" border=0/></a>
 
 	</div>
     </TD>
