added function to change blast algorithm when updating parameters for previously run analyses

--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -32,6 +32,7 @@ function update_params() {
     $('#masked2 option:eq('+params[4]+')').attr('selected','selected');
     $('#masked1 option:eq('+params[7]+')').attr('selected','selected');
   }
+ $('#blast option:eq('+params[9]+')').attr('selected','selected');
 }
 
 function ajax_wait (val){
