--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -4,6 +4,7 @@ function get_organism_chain(type,val,i)
  $('#org_list').html('<input type=hidden id = "org_id"+i><font class="loading"></font>');
  if (type == 'name') {get_orgs(['args__name','args__'+val,'args__i','args__'+i], ['org_list'+i]);}
  else if (type == 'desc') {get_orgs(['args__desc','args__'+val,'args__i','args__'+i], ['org_list'+i]);}
+ $('#ds_info'+i).html('<div class="loading dna_small small">loading. . .</div>');
  ajax_wait("get_datasets(['args__oid','org_id"+i+"','args__masked','masked"+i+"'],['ds_info"+i+"']);");
  ajax_wait("check_previous_analyses();");
 }
@@ -134,23 +135,51 @@ function handle_results(val){
 
 }
 
+//These two functions are involved with emailing results
+function toggle_email_field(){
+	if ($('#check_email')[0].checked)
+	{
+		$('#email_box').show(0);
+	}
+	else{
+		$('#email_box').hide(0);
+		$('#email').val('');
+		$('#email_error').hide(0);
+	}
+}
+
+function address_validity_check(validity){
+	if (validity)
+	{
+		if(validity == 'invalid'){
+		$('#email_error').show(0);
+		}
+		else{
+		$('#email_error').hide(0);
+		}
+	}
+	else{
+	check_address_validity(['email'],[address_validity_check]);
+	}
+}
 
 </script>
 <table><tr><td>
-<DIV id=results><span class="alert">WARNING:</span>  SynMap is a very computationally intense, multi-step program which may take hours to complete.  Please do not repeatedly pressed the "Generate SynMap" button!  When run, SynMap will:
+<DIV id=results><TMPL_IF NAME=RESULTS><TMPL_VAR NAME=RESULTS><TMPL_ELSE><span class="alert">WARNING:</span>  SynMap is a very computationally intense, multi-step program which may take hours to complete. It is highly recommended to have your results emailed to you. Please do not repeatedly pressed the "Generate SynMap" button!  When run, SynMap will:
 <li class=small>Generate fasta files of all coding sequence in selected genomes
 <li class=small>Generate blastable databases of sequences
 <li class=small>Blast genomes (self-self and self-other)
 <li class=small>Find tandem duplicates in each genome (hence the self-self blast)
 <li class=small>Use DAGchainer to find syntenic regions (parameters below)
-<li class=small>Generate dotplot images and image maps with GEvo links<br>
+<li class=small>Generate dotplot images and image maps with GEvo links
+<li class=small>If requested, will e-mail your results to you<br>
 <span class=species>SynMap will run faster if it has been previously run as it won't regenerate any previously made data-sets.</span>
-
+</TMPL_IF>
 </div>
 </table>
 
 <div>
-<input type=button id="synmap_go" value="Generate SynMap" onClick="$('#synmap_go').hide(); $('#results').html('<span class=dna>Loading. . .</span>');go(['args__oid1','org_id1','args__oid2','org_id2','args__D','D','args__g','g','args__A','A','args__chr_length_limit','chr_length_limit','args__blast','blast', 'args__seq_type1','seq_type1', 'args__seq_type2','seq_type2','args__masked1','masked1', 'args__masked2','masked2','args__show_diags_only','args__'+$('#show_diags_only')[0].checked,'args__flip_output','args__'+$('#flip_output')[0].checked, 'args__regen_images','args__'+$('#regen_images')[0].checked],[handle_results]);" \>
+<input type=button id="synmap_go" value="Generate SynMap" onClick="$('#synmap_go').hide(); $('#results').html('<span class=dna>Loading. . .</span>');go(['args__oid1','org_id1','args__oid2','org_id2','args__D','D','args__g','g','args__A','A','args__chr_length_limit','chr_length_limit','args__blast','blast', 'args__seq_type1','seq_type1', 'args__seq_type2','seq_type2','args__masked1','masked1', 'args__masked2','masked2','args__email','email','args__show_diags_only','args__'+$('#show_diags_only')[0].checked,'args__flip_output','args__'+$('#flip_output')[0].checked, 'args__regen_images','args__'+$('#regen_images')[0].checked],[handle_results]);" \>
 
 <input type=button value="Clear Results" onClick="$('#results').html('');" \>
 
@@ -218,6 +247,11 @@ function handle_results(val){
         <OPTION VALUE="1" selected>BlastN
         <OPTION VALUE="2">TBlastX
        </select>
+   </td>
+   <td>E-mail results? <input type=checkbox id=check_email onclick="toggle_email_field()"></td>
+		<td><div id=email_box style="display:none;">Your E-mail Address: <input type=text id=email onBlur='address_validity_check()'>
+		<br>
+		<font id=email_error class="small" style="display: none; color: red;">You have supplied an invalid e-mail address.</font></div></td>
  <TR>
    <TD>Minimum length of chromosomes:
    <TD><input type=text size=8 id="chr_length_limit" value="1000000"> bp
